--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "homepage": "https://github.com/okata-t/niconico-embed-bot#readme",
   "dependencies": {
-    "cheerio": "^1.2.0",
+    "cheerio": "1.0.0-rc.12",
     "discord.js": "^14.25.1",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
